## File created by the gnome-build tools
mulpimagesdir = /usr/share/mulp/images
mulpimages_DATA = \
	accessibility.png \
	appearance.png \
	bluetooth.png \
	ccsm.png \
	debian-logo.png \
	desktopinfo.png \
	diskutility.png \
	driversinfo.png \
	drivers.png \
	gdm-setup.png \
	gnome-gimp.png \
	gnome-power-manager.png \
	image.png \
	input-keyboard.png \
	input-mouse.png \
	installandremovesoftware.png \
	language.png \
	logviewer.png \
	mainmenu.png \
	Makefile.in \
	monitor.png \
	monitors.png \
	nautilus.png \
	network.png \
	networkproperties.png \
	networksettings.png \
	onlineupdate.png \
	preferences-desktop-sound.png \
	preferredapplications.png \
	printer.png \
	region.png \
	remotedesktop.png \
	remotefolder.png \
	screensaver.png \
	shortcuts.png \
	softwarecenter.png \
	softwaresource.png \
	startupapplications.png \
	system.png \
	systemsettings.png \
	temizle.png \
	time-admin.png \
	truvalinux.png \
	ubuntu.png \
	usbdiskgtk.png \
	usersgroups.png
	
EXTRA_DIST = $(mulpimages_DATA)

uninstall-local:
	-rm -r $(mulpimagesdir)